<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/my_button_bg"
        android:text="@string/log_out"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="43dp"
                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:contentDescription="@string/descImg"
                app:srcCompat="@drawable/ic_discussion"
                android:tint="#fff"/>

            <TextView
                android:id="@+id/discussionTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/discussiontxt"
                android:textSize="28sp"
                android:textColor="#fff"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goRight"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="#fff"/>
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="43dp"
                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:contentDescription="@string/descImg"
                app:srcCompat="@drawable/ic_timesheet"
                android:tint="#fff"/>

            <TextView
                android:id="@+id/timesheetTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/timesheettxt"
                android:textSize="28sp"
                android:textColor="#fff"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goRight2"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="#fff"/>
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="43dp"
                android:layout_height="match_parent"
                android:layout_marginStart="18dp"
                android:contentDescription="@string/descImg"
                app:srcCompat="@drawable/ic_report"
                android:tint="#fff"/>

            <TextView
                android:id="@+id/reportTxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/reporttxt"
                android:textSize="28sp"
                android:textColor="#fff"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goRight2"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="#fff"/>
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>




</android.support.constraint.ConstraintLayout>